--- a/app/stylesheets/application/_globals--reset.scss
+++ b/app/stylesheets/application/_globals--reset.scss
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe,
+html, body, div, span, applet, object, iframe, 
 p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -18,7 +18,7 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-ol,
+ol, 
 ul {
   list-style: none;
 }
@@ -28,42 +28,32 @@ table {
   border-spacing: 0;
 }
 
-caption,
-th,
+caption, 
+th, 
 td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-q,
+q, 
 blockquote {
   quotes: none;
-}
-q:before, q:after,
-blockquote:before,
-blockquote:after {
-  content: "";
-  content: none;
+  
+  &:before, 
+  &:after {
+    content: "";
+    content: none;
+  }
 }
 
 a img {
   border: none;
 }
 
-article, aside, details,
-figcaption, figure, footer,
-header, hgroup, menu, nav,
+article, aside, details, 
+figcaption, figure, footer, 
+header, hgroup, menu, nav, 
 section, summary {
   display: block;
 }
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-size: 16px;
-}
-
-/*# sourceMappingURL=application.css.map */
